Fixed issue of YouTube embedding messing with mobile visibility

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,9 @@ a:active {color: DeepSkyBlue;}
   .main {
     flex: initial;
   }
+  .youtube {
+    width: 100%;
+  }
 }
 
 .repolink {
